@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.38 2015/11/03 20:56:45 agc Exp $
+$NetBSD: distinfo,v 1.39 2020/12/02 08:50:24 ast Exp $
 
-SHA1 (cgoban-java-3.4.14.jar) = ac86b07caad96b739680da925721a6d43dedc2a1
-RMD160 (cgoban-java-3.4.14.jar) = ca54c2f1887306b74fd5ff5d16e9a4332de24907
-SHA512 (cgoban-java-3.4.14.jar) = 43a3420b4f6c3288fd4c141679cc0b2f963f6a2a4913b676018bebf8ceb1f0ebe3c0f523c72765d757f9652338fd0cc2063f9b43d954ce326ea05110df5640e7
-Size (cgoban-java-3.4.14.jar) = 1472537 bytes
+SHA1 (cgoban-java-3.5.23.jar) = b26704ba082ee51f4a90c63c5029a196788d4086
+RMD160 (cgoban-java-3.5.23.jar) = c73e4cd962c65461502e453bcdf9b5be6b84b08c
+SHA512 (cgoban-java-3.5.23.jar) = 532a5828dd3e048605fe6797bab5f6e149e402d0233f4cdfaba4fb2356d104d16e0a84e0d96c63fcf73c7a6a8ea9135f3aac62508e9fab480a37e0363e981402
+Size (cgoban-java-3.5.23.jar) = 2782847 bytes
